Buttons from figma design

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,19 +4,26 @@
 
 :root {
   --foreground-color: #000;
-  --background-color: #ffbb74;
+  --background-color: #f5f5dc;
+  --button-color: #ffbb74;
+  --button-small-color: #ffcf9d;
+  --button-disabled-color: #c3c4d3;
 }
 
 /* @media (prefers-color-scheme: dark) {
   :root {
     --foreground-color: #fff;
     --background-color: #25211e;
+    --button-color: #534435;
+    --button-small-color: #5c442c;
+    --button-disabled-color: #464649;
   }
 } */
 
 body {
   color: var(--foreground-color);
   background: var(--background-color);
+  font-family: 'Bahnscrift';
 }
 
 #root {
@@ -75,7 +82,7 @@ body {
   width: 80vw;
   max-width: 260px;
   height: 340px;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 2.5px 2.5px 0px rgba(0, 0, 0, 0.12);
   border-radius: 12px 12px 20px 20px;
   background-size: cover;
   background-position: center;
@@ -85,7 +92,7 @@ body {
 .cardGradient {
   width: 100%;
   height: 100%;
-  background: linear-gradient(to bottom, #0000, #0000 75%, rgba(0, 0, 0, 0.75) 100%);
+  background: linear-gradient(to bottom, #0000, #0000 70%, rgba(0, 0, 0, 0.9) 100%);
 }
 
 .swipe:last-of-type {
@@ -112,12 +119,16 @@ body {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-.card .bottomContent {
-  position: absolute;
-  bottom: 0;
-  margin: 0 10px 20px 20px;
+.card .expandableDescription {
+  margin: 0 0 20px 0;
+  padding: 10px 10px 10px 20px;
   color: #fff;
   text-shadow: 0px 0px 4px #000;
+  transition: all 0.2s ease-out;
+}
+
+.card .expandableDescription.contracted {
+  padding-bottom: 0;
 }
 
 .flexContainer {
@@ -139,12 +150,34 @@ body {
   margin-bottom: 3px;
 }
 
-.card p {
+.card .expandableDescription p {
   max-width: 230px;
+  max-height: 220px;
   margin: 6px 0 0 0;
   width: 100%;
-  height: 14px;
   font-size: 12px;
+  overflow-y: scroll;
+}
+
+.expandableDescription {
+  position: absolute;
+  bottom: 0;
+  border-radius: 5px;
+  background: rgba(40, 40, 40, 0.75);
+  transition: background-color 0.2s ease-out;
+}
+
+.expandableDescription.contracted {
+  background: none;
+  top: auto;
+}
+
+.expandableDescription p {
+  transition: all 2s ease-out;
+}
+
+.expandableDescription.contracted p {
+  height: 14px;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -161,7 +194,8 @@ body {
 
 .buttons {
   margin: 20px;
-  display: flex;
+  width: 80vw;
+  max-width: 260px;
   flex-wrap: wrap;
 }
 
@@ -173,21 +207,28 @@ body {
 
 .buttons button {
   flex-shrink: 0;
-  padding: 10px;
-  border-radius: 5px;
   border: none;
-  /* color: #fff; */
-  font-size: 18px;
-  background-color: #9198e5;
   transition: 200ms;
-  margin: 10px;
-  font-weight: bolder;
-  width: 160px;
-  box-shadow: 0px 0px 30px 0px rgba(0,0,0,0.10);
+  box-shadow: 0px 0px 2.5px 0.6px rgba(0,0,0,0.25);
+}
+
+.buttons button.big {
+  background-color: var(--button-color);
+  border-radius: 28px;
+  width: 56px;
+  height: 56px;
+}
+
+.buttons button.small {
+  margin-top: 3px;
+  background-color: var(--button-small-color);
+  border-radius: 25px;
+  width: 50px;
+  height: 50px;
 }
 
 .buttons button:hover {
-  transform: scale(1.05);
+  transform: scale(1.1);
 }
 
 @keyframes popup {
