--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,6 +71,7 @@ body {
 .topMenu .logo {
   display: flex;
   margin-left: 5px;
+  cursor: pointer;
 }
 
 .topMenu .logo > img {
@@ -226,6 +227,7 @@ body {
   border-radius: 5px;
   background: rgba(40, 40, 40, 0.75);
   transition: background-color 0.2s ease-out;
+  cursor: pointer;
 }
 
 .expandableDescription.contracted {
@@ -274,6 +276,7 @@ body {
   border: none;
   transition: 200ms;
   box-shadow: 0px 0px 2.5px 0.6px rgba(0,0,0,0.25);
+  cursor: pointer;
 }
 
 .buttons button.big {
