Add room creation pages

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,10 +5,14 @@
 :root {
   --foreground-color: #000;
   --background-color: #f5f5dc;
+  --top-menu-color: #004225;
   --button-color: #ffbb74;
   --button-small-color: #ffcf9d;
   --button-inactive-color: #ffdbb5;
   --button-disabled-color: #c3c4d3;
+  --button-hover-color: #fe9a33;
+  --popup-color: #fea242;
+  --curtain-color: rgba(206, 206, 206, 0.8);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -19,6 +23,9 @@
     --button-small-color: #62482f;
     --button-inactive-color: #4c433b;
     --button-disabled-color: #464649;
+    --button-hover-color: #4d3822;
+    --popup-color: #513a29;
+    --curtain-color: rgba(50, 50, 50, 0.8);
   }
 
   .roomSwitch button img, .buttons button.small img {
@@ -65,13 +72,14 @@ body {
   display: flex;
   width: 100vw;
   height: 50px;
-  background: #004225;
+  background: var(--top-menu-color);
 }
 
 .topMenu .logo {
   display: flex;
   margin-left: 5px;
   cursor: pointer;
+  text-decoration: none;
 }
 
 .topMenu .logo > img {
@@ -94,25 +102,33 @@ body {
   font-size: 12px;
 }
 
-.topMenu .info > a {
+.topMenu .info .navLink {
   margin-left: 10px;
   color: #fff;
   text-decoration: none;
 }
 
-.topMenu .info > a:hover {
+.topMenu .info .navLink:hover {
   text-decoration: underline;
 }
 
 .topMenu .signIn {
   margin: auto 20px auto auto;
-  width: 60px;
+  width: 65px;
   height: 18px;
-  border: none;
   border-radius: 6px;
-  background: #ffbb74;
+  line-height: 18px;
+  color: var(--foreground-color);
+  background: var(--button-color);
+  transition: all 100ms;
+  text-decoration: none;
+  text-align: center;
   font-size: 10px;
   font-weight: bold;
+}
+
+.topMenu .signIn:hover {
+  transform: scale(1.05);
 }
 
 .row {
@@ -274,7 +290,7 @@ body {
 .buttons button {
   flex-shrink: 0;
   border: none;
-  transition: 200ms;
+  transition: all 200ms;
   box-shadow: 0px 0px 2.5px 0.6px rgba(0,0,0,0.25);
   cursor: pointer;
 }
@@ -352,6 +368,151 @@ body {
   margin-top: 140px;
   font-size: 24px;
   font-weight: bold;
+}
+
+.roomButtons {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  p {
+    margin-top: 100px;
+    font-size: 50px;
+    font-weight: bold;
+  }
+}
+
+.roomButtons button {
+  margin: 12px;
+  width: 340px;
+  height: 59px;
+  border: none;
+  transition: all 200ms;
+  cursor: pointer;
+  color: var(--foreground-color);
+  background-color: var(--button-color);
+  border-radius: 12px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.roomButtons button:hover {
+  background-color: var(--button-hover-color);
+}
+
+.roomUtils .popup {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  visibility: hidden;
+  width: 334px;
+  background-color: var(--popup-color);
+  border-radius: 12px;
+  padding: 8px 0;
+  position: absolute;
+  z-index: 1;
+  top: 200px;
+  left: calc(50% - 334px / 2);
+}
+
+.roomUtils .curtain {
+  visibility: hidden;
+  position: absolute;
+  left: 0;
+  top: 50px;
+  width: 100vw;
+  height: calc(100vh - 50px);
+  background: var(--curtain-color);
+}
+
+.roomUtils.active {
+  .curtain {
+    visibility: visible;
+    -webkit-animation: fadeIn 1s;
+    animation: fadeIn 1s;
+  }
+
+  .popup {
+    visibility: visible;
+    -webkit-animation: fadeIn 1s;
+    animation: fadeIn 1s;
+  }
+
+  button {
+    background-color: var(--button-color) !important;
+    cursor: default !important;
+  }
+}
+
+.roomUtils .title {
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.roomUtils .popup {
+  img {
+    width: 60px;
+    margin-bottom: 10px;
+  }
+
+  img.qr {
+    margin-top: 10px;
+    width: 170px;
+    border-radius: 12px;
+    background: white;
+  }
+
+  .field {
+    margin-top: 10px;
+  }
+
+  .field p {
+    margin: 0 0 1px 15px;
+    font-size: 13px;
+  }
+
+  input {
+    width: 250px;
+    height: 34px;
+    border-radius: 17px;
+    border: none;
+    background: var(--background-color);
+    color: var(--foreground-color);
+    font-size: 24px;
+    text-align: center;
+  }
+
+  .joinButton {
+    margin-top: 20px;
+    margin-bottom: 10px;
+    width: 60px;
+    height: 60px;
+    border-radius: 30px;
+    transition: transform 200ms;
+    background: var(--top-menu-color);
+    color: var(--foreground-color);
+    text-decoration: none;
+    text-align: center;
+    font-weight: bold;
+    line-height: 60px;
+  }
+
+  .joinButton:hover {
+    transform: scale(1.1);
+  }
+}
+
+@-webkit-keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity:1 ;}
 }
 
 @keyframes popup {
